@@ -1,3 +1,10 @@
+Tue Jan 10 19:43:18 1995  Mark Eichin  (eichin@cygnus.com)
+
+	* krlogin.c (doit): use exit_handler for signal exits, don't use
+	exit directly.
+	(exit_handler): new function, avoids type collision from misusing
+	exit directly as a signal handler.
+
 Tue Jan 10 15:23:31 1995  Richard Basch  (probe@tardis)
 
 	* configure.in: Streams test needs to include sys/types.h
